<resources>

    <string name="app_name">الحاسبة</string>
    <string name="action_settings">الإعدادات</string>
    <string name="stdCal">الحاسبة العادية</string>
    <string name="sciCal">الحاسبة العلمية</string>
    <string name="unitCal">محول الوحدات</string>
    <string name="FullCal">تطبيق الحاسبة</string>
    <string name="title_activity_standard_cal">الحاسبة البسيطة</string>
    <string name="title_activity_scientific_cal">الحاسية العلمية</string>
    <string name="title_activity_unit_coverter">محول الوحدات</string>
    <string name="clear">إخلاء</string>
    <string name="backspace">⌫</string>
    <string name="divide">/</string>
    <string name="sqrt">\ufc6f</string>
    <string name="cuberoot">\ufd50</string>
    <string name="square">س²</string>
    <string name="cube">س³</string>
    <string name="tenpow">10\u207F</string>
    <string name="sininv">sin\u207B\u00B9</string>
    <string name="cosinv">cos\u207B\u00B9</string>
    <string name="taninv">tan\u207B\u00B9</string>
    <string name="posneg">±</string>
    <string name="arrow">↑</string>
    <string name="xpown">xⁿ</string>
    <string name="epown">eⁿ</string>
    <string name="pi">π</string>
    <string name="title_activity_unit_area">UnitArea</string>
    <string name="title_activity_unit_length">UnitLength</string>
    <string name="title_activity_unit_weight">UnitWeight</string>
    <string name="title_activity_unit_temperature">UnitTemperature</string>
    <string name="Brackets">( )</string>
    <string name="history">History</string>

    <string name="length">مسافة</string>
    <string name="mass">وزن</string>
    <string name="area">مساحة</string>
    <string name="temperature">درجة حرارة</string>
    <string name="volume">كمية</string>
    <string name="data">بيانات</string>

    <string-array name="area">
        <item>مليمتر مربع</item>
        <item>سنتيمتر مربع</item>
        <item>متر مربع</item>
        <item>كيلومتر مربع</item>
        <item>فدان</item>
        <item>هكتار</item>
    </string-array>

    <string-array name="length">
        <item>نانومتر</item>
        <item>مليمتر</item>
        <item>سنتيمتر</item>
        <item>متر</item>
        <item>كيلومتر</item>
        <item>إنش</item>
        <item>قدم</item>
        <item>ياردة</item>
        <item>ميل</item>
    </string-array>

    <string-array name="temperature">
        <item>درجة مئوية</item>
        <item>فهرنهايت</item>
        <item>كيلفن</item>
    </string-array>

    <string-array name="weight">
        <item>مليغرام</item>
        <item>سنتيغرام</item>
        <item>ديسيغرام</item>
        <item>غرام</item>
        <item>كيلوغرام</item>
        <item>طن</item>
        <item>رطل</item>
        <item>أونصة</item>
    </string-array>

    <string name="title_activity_history">التاريخ</string>
    <string name="deleteHistory">إخلاء التاريخ</string>
    <string name="mode1">درجة</string>
    <string name="mode2">Radian</string>
    <string name="toggle">SWITCH</string>
    <string name="sin">جا</string>
    <string name="cos">جتا</string>
    <string name="tan">ظا</string>
    <string name="naturalLog">ln</string>
    <string name="hyperbolicSine">sinh</string>
    <string name="hyperbolicCosine">cosh</string>
    <string name="hyperbolicTan">tanh</string>
    <string name="log">log</string>
    <string name="Mod">%</string>
    <string name="inverse">1/س</string>
    <string name="factorial">س!</string>

    <string name="n_1">١</string>
    <string name="n_2">٢</string>
    <string name="n_3">٣</string>
    <string name="n_4">٤</string>
    <string name="n_5">٥</string>
    <string name="n_6">٦</string>
    <string name="n_7">٧</string>
    <string name="n_8">٨</string>
    <string name="n_9">٩</string>
    <string name="n_0">٠</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="divider">÷</string>

    <string name="square_root">√</string>

    <string name="empty_sqrt">الرجاء إدخال الرقم أولاً</string>

    <!--
         <string name="app_name">CalculatorApp</string>
    <string name="action_settings">Settings</string>
    <string name="stdCal">Standard Calculator</string>
    <string name="sciCal">Scientific Calculator</string>
    <string name="unitCal">Unit Converter</string>
    <string name="FullCal">Calculator App</string>
    <string name="title_activity_standard_cal">StandardCal</string>
    <string name="title_activity_scientific_cal">ScientificCal</string>
    <string name="title_activity_unit_coverter">UnitCoverter</string>
    <string name="clear">C</string>
    <string name="backspace">⌫</string>
    <string name="divide">÷</string>
    <string name="sqrt">√</string>
    <string name="cuberoot">\u221B</string>
    <string name="square">x²</string>
    <string name="cube">x\u00B3</string>
    <string name="tenpow">10\u207F</string>
    <string name="sininv">sin\u207B\u00B9</string>
    <string name="cosinv">cos\u207B\u00B9</string>
    <string name="taninv">tan\u207B\u00B9</string>
    <string name="posneg">±</string>
    <string name="arrow">↑</string>
    <string name="xpown">xⁿ</string>
    <string name="epown">eⁿ</string>
    <string name="pi">π</string>
    <string name="title_activity_unit_area">UnitArea</string>
    <string name="title_activity_unit_length">UnitLength</string>
    <string name="title_activity_unit_weight">UnitWeight</string>
    <string name="title_activity_unit_temperature">UnitTemperature</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="history">History</string>

    <string-array name="area">
        <item>Sq. Millimeter</item>
        <item>Sq. Centimeter</item>
        <item>Sq Meter</item>
        <item>Sq. Kilometer</item>
        <item>Acre</item>
        <item>Hectare</item>
    </string-array>

    <string-array name="length">
        <item>Nanometer</item>
        <item>Millimeter</item>
        <item>Centimeter</item>
        <item>Meter</item>
        <item>Kilometer</item>
        <item>Inches</item>
        <item>Foot</item>
        <item>Yards</item>
        <item>Mile</item>
    </string-array>

    <string-array name="temperature">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>

    <string-array name="weight">
        <item>Milligrams</item>
        <item>Centigrams</item>
        <item>Decigrams</item>
        <item>Grams</item>
        <item>Kilograms</item>
        <item>Metric tonnes</item>
        <item>Pounds</item>
        <item>Ounces</item>
    </string-array>

    <string name="title_activity_history">History</string>
    <string name="deleteHistory">Delete History</string>
    <string name="mode1">Degree</string>
    <string name="mode2">Radian</string>
    <string name="toggle">SWITCH</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="naturalLog">ln</string>
    <string name="hyperbolicSine">sinh</string>
    <string name="hyperbolicCosine">cosh</string>
    <string name="hyperbolicTan">tanh</string>
    <string name="log">log</string>
    <string name="Mod">%</string>
    <string name="inverse">1/x</string>
    <string name="factorial">x!</string>
-->

    <!-- TODO: Remove or change this placeholder text -->
    <!--
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>>
     -->

</resources>
