<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parent"
    tools:context="com.hamid.www.calculator.AreaConverter">

    <LinearLayout
        android:layout_width="137dp"
        android:layout_height="343dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="166dp">

        <ImageButton
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="#fff"
            android:onClick="onClick"
            android:src="@drawable/history_button" />


        <Button
            android:id="@+id/num7"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent"
            android:onClick="onClick"
            android:text="@string/n_7"
            android:textSize="20sp" />

        <Button
            android:id="@+id/num4"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent"
            android:onClick="onClick"
            android:text="@string/n_4"
            android:textSize="20sp" />

        <Button
            android:id="@+id/num1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent"
            android:onClick="onClick"
            android:text="@string/n_1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/posneg"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent"
            android:onClick="onClick"
            android:text="@string/posneg"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Brackets"
            android:layout_width="88dp"
            android:layout_height="60dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="onClick"
            android:text="@string/Brackets"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>
