<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.hamid.www.calculator.UnitsOptionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:text="TBD"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="onClick"
            android:id="@+id/data">
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:background="@color/transparent"
                android:src="@drawable/data_converter"
                android:scaleType="fitCenter"/>

            <TextView
                android:text="@string/data"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="serif-monospace"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="onClick"
            android:id="@+id/length">
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:background="@color/transparent"
                android:src="@drawable/length_converter"
                android:scaleType="fitCenter"/>

            <TextView
                android:text="@string/length"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="serif-monospace"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="onClick"
            android:id="@+id/temperature">
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:background="@color/transparent"
                android:src="@drawable/temp_converter"
                android:scaleType="fitCenter"/>

            <TextView
                android:text="@string/temperature"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="serif-monospace"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="onClick"
            android:id="@+id/volume">
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:background="@color/transparent"
                android:src="@drawable/volume_converter"
                android:scaleType="fitCenter"/>

            <TextView
                android:text="@string/volume"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="serif-monospace"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="onClick"
            android:id="@+id/wight">
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:background="@color/transparent"
                android:src="@drawable/mass_converter"
                android:scaleType="fitCenter"/>

            <TextView
                android:text="@string/mass"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="serif-monospace"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="onClick"
            android:id="@+id/area">
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:background="@color/transparent"
                android:src="@drawable/area_converter"
                android:scaleType="fitCenter"/>

            <TextView
                android:text="@string/area"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="serif-monospace"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
